--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>ToDo App</title>
   </head>
   <body>
     <div id="root">Not Rendered</div>
-    <script type="module" src="index.tsx"></script>
+    <script type="module" src="./../src/index.tsx"></script>
   </body>
 </html>
